third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/multiline-quotes-1.stderr
TOML parse error at line 1, column 23
  |
1 | a = """6 quotes: """"""
  |                       ^
expected newline, `#`
